Fixed floating point overflow

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 html, body {
     margin: 0;
     padding: 0;
+    background-color: rgb(235, 233, 235);
 }
 
 body {
@@ -38,7 +39,7 @@ body {
     height: 400px;
     /* gap: 0.5rem; */
     margin: auto;
-    border: 5px solid black;
+    border: 10px solid black;
 }
 div .grid-item {
     display: grid;
@@ -55,11 +56,17 @@ div .grid-item {
     border: 1px solid #000000;
     font-size: 25px;
     color: #000000;
+    height: 78px;
 }
 .operators {
     background-color: #0e918c;
     border: 1px solid #000000;
     color: #d2d3c9;
+    font-size: 40px;
+}
+.clear {
+    background-color: #0e918c;
+    border: 1px solid black;
     font-size: 40px;
 }
 
@@ -79,6 +86,11 @@ div .grid-item {
     /* border: 2px solid black; */
     border-bottom: 5px solid black;
     font-size: 70px;
+}
+.zero {
+    background-color: #e42323;
+    border: 1px solid black;
+    font-size: 40px;
 }
 
 
